[package]
name = "baker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
fs-err = "2.11.0"
fs_extra = "1.3.0"
fsio = "0.4.0"
normpath = "1.1.1"
relative-path = "1.9.0"
rusqlite = "0.30.0"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
walkdir = "2.4.0"
